--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
         .section.active {
             display: block;
         }
+/* Пример CSS-анимации */
+ .animate {
+ animation: fadein 2s; 
+ }
+ @keyframes fadein {
+ from { opacity: 0; } 
+ to { opacity: 1; } 
+ }
     </style>
 </head>
 <body>
@@ -53,6 +61,10 @@
         <li><a href="#about" class="nav-link">Обо мне</a></li>
         <li><a href="#skills" class="nav-link">Навыки</a></li>
         <li><a href="#image" class="nav-link">Изображение</a></li>
+	<li><a href="#audio" class="nav-link">Аудио</a></li>
+	<li><a href="#video" class="nav-link">Видео</a></li>
+	<li><a href="#map" class="nav-link">Карта</a></li>
+	<li><a href="#animation" class="nav-link">Анимация</a></li>
     </ul>
 </nav>
 
@@ -77,6 +89,32 @@
 	<img src="image.jpg">
     <p>Здесь будет размещено какое-то изображение.</p>
 </div>
+
+<div id="audio" class="section">
+ 	<h2>Аудио</h2>
+ 	<audio controls>
+	 <source src="audio.mp3">
+ 	</audio>
+</div>
+
+<div id="video" class="section">
+ <h2>Видео</h2>
+ <video controls>
+ <source src="video.mp4" type="video/mp4">
+ </video>
+</div>
+
+<div id="map" class="section">
+ <h2>Карта</h2>
+ <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46502.47558889432!2d76.92187270014077!3d43.24293889566241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38836f122f177b13%3A0xe160a2584fac3ed0!2z0KHQsNGD0L3QsCDCq9Cc0YPQttGB0LrQvtC1INC70L7Qs9C-0LLQvsK7!5e0!3m2!1sru!2skz!4v1712577253075!5m2!1sru!2skz" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
+<div id="animation" class="section">
+ <h2>Анимация</h2>
+ <p class="animate">Пример текста с 
+анимацией.</p>
+</div>
+
+
 
 <!-- Подключение скрипта -->
 <script>
